<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="local_service_stopped"></string>
    <string name="local_service_started"></string>
    <string name="app_name">Providence</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_back">Back</string>
    <string name="welcome">Welcome to Providence</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">Providence</string>
    <string name="title_activity_login">Providence</string>
    <string name="open_map">Map</string>
    <string name="preference_key">SomethingThatUniquelyIdentifiesMyPreference</string>
    <string name="user_key">savedUserKey</string>
    <string name="logout_button">Logout</string>
    <string name="force_set_location_button">Force set location</string>
    <string name="force_get_location_button">Force get location</string>
    <string name="service_name">Providence GPS logger</string>
    <string name="notification_location_sent"></string>
    <string name="notification_service_started"></string>
    <string name="notification_location_update_error"></string>
    <string name="notification_fubar"></string>
    <string name="title_activity_wifi">Providence</string>
    <string name="wifi_button">Scan for wifi</string>
    <string name="title_activity_bt">BTActivity</string>
    <string name="bt_button">Scan for Bluetooth</string>

</resources>
